--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>io.confluent</groupId>
     <artifactId>kafka-connect-jdbc</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>kafka-connect-jdbc</name>
     <organization>
         <name>Confluent, Inc.</name>
@@ -50,7 +50,7 @@
     </scm>
 
     <properties>
-        <confluent.version>2.0.0-SNAPSHOT</confluent.version>
+        <confluent.version>2.0.0</confluent.version>
         <kafka.version>0.9.0.0</kafka.version>
         <junit.version>4.12</junit.version>
         <easymock.version>3.0</easymock.version>
@@ -169,6 +169,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
+                    <skipTests>true</skipTests>
                     <argLine>-Djava.awt.headless=true</argLine>
                 </configuration>
             </plugin>
